# NewKnowledge

./: .gitignore  README.md
C++/TresEnRaya/TresEnRaya/: CMakeLists.txt  main.cpp  maintest.cpp
C++/TresEnRaya/TresEnRaya/src/controller/: PlayTurnController.cpp  PlayTurnController.hpp  StartController.cpp  StartController.hpp
C++/TresEnRaya/TresEnRaya/src/model/: Board.cpp  Board.hpp  English.cpp  English.hpp  Game.cpp  Game.hpp  Language.cpp  Language.hpp  Player.cpp  Player.hpp  Players.cpp  Players.hpp  Spanish.cpp  Spanish.hpp
C++/TresEnRaya/TresEnRaya/src/others/: Coordenate.cpp  Coordenate.hpp  Dimension.hpp  LanguageFactory.cpp  LanguageFactory.hpp  LanguagesAvailables.cpp  LanguagesAvailables.hpp  Piece.cpp  Piece.hpp  winvalidator.cpp  winvalidator.h
C++/TresEnRaya/TresEnRaya/src/test/: TestDimension3x3TwoPlayersAllOk.cpp  TestDimension3x3TwoPlayersAllOk.hpp  TestDimension3x3TwoPlayersSpanishError.cpp  TestDimension3x3TwoPlayersSpanishError.hpp
C++/TresEnRaya/TresEnRaya/src/test/view/: PlayTurnViewTestSpanishDimension3x3TwoPlayersAllOk.cpp  PlayTurnViewTestSpanishDimension3x3TwoPlayersAllOk.hpp  PlayTurnViewTestSpanishDimension3x3TwoPlayersAllOkDraw.cpp  PlayTurnViewTestSpanishDimension3x3TwoPlayersAllOkDraw.hpp  StartGameViewTestSpanishDimension3x3ErrorNumberPlayers.cpp  StartGameViewTestSpanishDimension3x3ErrorNumberPlayers.hpp  StartGameViewTestSpanishDimension3x3TwoPlayersAllOk.cpp  StartGameViewTestSpanishDimension3x3TwoPlayersAllOk.hpp
C++/TresEnRaya/TresEnRaya/src/view/: PlayTurnIAPlayerView.cpp  PlayTurnIAPlayerView.hpp  PlayTurnRealPlayerView.cpp  PlayTurnRealPlayerView.hpp  PlayTurnViewBase.cpp  PlayTurnViewBase.hpp  StartGameView.cpp  StartGameView.hpp  StartGameViewBase.cpp  StartGameViewBase.hpp  View.cpp  View.hpp
Cairo+Gtkmm4/: CMakeLists.txt
Cairo+Gtkmm4/src/: ButtonBox.cpp  ButtonBox.hpp  ExampleWindow.cpp  ExampleWindow.hpp  HelloWorld.cpp  HelloWorld.hpp  MyArea.cpp  MyArea.hpp  MyAreaTest.cpp  MyAreaTest.hpp  MyImage.cpp  MyImage.hpp  main.cpp
Gtk/: CMakeLists.txt  Diseño.drawio
Gtk/code/: Factory.cpp  Label.hpp  Window.cpp  Window.hpp  iGraphicElement.hpp  iLabel.hpp  iWindow.hpp  main.cpp
Gtk/code/design/: iColumn.hpp  iLabel.hpp  iRow.hpp  iWidget.hpp  iWindow.hpp
Gtk/code/gtkBook/: ExampleAssistant.cpp  ExampleWindow.cpp  ExampleWindow.hpp  MyArea.cpp  MyArea.hpp  MyImage.cpp  MyImage.hpp  OwnWindow.cpp  OwnWindow.hpp  clock.cpp
Gtk/code/implementation/: Column.cpp  Column.hpp  Factory.hpp  Label.cpp  Label.hpp  Row.cpp  Row.hpp  Window.cpp  Window.hpp  aWidget.cpp  aWidget.hpp
QML/: README.md
QML/DDS_QML/: README.md
QML/DDS_QML/DDS_Bank_Backend/: .$dds_qml_bank.bkp  Arquitectura.drawio  CMakeLists.txt  application.hpp  bank.idl  bankmodel.cpp  bankmodel.hpp  dds_qml_bank  main.cpp  subscriber.cpp  subscriber.hpp
QML/DDS_QML/Prueba01/: Prueba01.pro
QML/DDS_QML/Prueba02/: CMakeLists.txt  application.hpp  chocolate_factory.cxx  chocolate_factory.hpp  chocolate_factoryPlugin.cxx  chocolate_factoryPlugin.hpp  chocolate_factory_publisher.cxx  main.qml
QML/DDS_QML/Prueba03/: CMakeLists.txt  README_x64Linux4gcc7.3.0.txt  main.cpp  main.qml  makefile_own_topics_x64Linux4gcc7.3.0  own_topics.cxx  own_topicsPlugin.cxx  own_topicsPlugin.hpp  publisher.cpp
QML/DDS_QML/Prueba04/: CMakeLists.txt  USER_QOS_PROFILES.xml  main.cpp  own_topics.hpp  own_topics.idl  publisher.cpp
QML/QMLCourse/: Notes.md  README.md
QML/QMLCourse/qmlb-10-1/: main.qml
QML/QMLCourse/qmlb-10-2/: code.js  main.qml
QML/QMLCourse/qmlb-10-tarea/: main.qml
QML/QMLCourse/qmlb-11-1/: main.cpp  main.qml  test.cpp  test.h
QML/QMLCourse/qmlb-11-3/: main.cpp  main.qml  test.cpp  test.h
QML/QMLCourse/qmlb-11-4/: main.cpp  main.qml  qmlb-11-4.pro  testing.cpp  testing.h
QML/QMLCourse/qmlb-11-5/: machine.cpp  machine.h  main.cpp  main.qml
QML/QMLCourse/qmlb-11-tarea/: cat.cpp  cat.h  main.cpp  main.qml
QML/QMLCourse/qmlb-12-1/: CoolButton.qml  MyButton.qml  main.qml  qml.qrc
QML/QMLCourse/qmlb-12-2/: NumberPad.qml  main.qml
QML/QMLCourse/qmlb-12-3/: Login.qml  main.qml
QML/QMLCourse/qmlb-12-4/: ColorCombo.qml  main.qml
QML/QMLCourse/qmlb-2-9/: main.qml
QML/QMLCourse/qmlb-3-1/: main.qml
QML/QMLCourse/qmlb-3-3/: main.qml
QML/QMLCourse/qmlb-3-4/: main.qml
QML/QMLCourse/qmlb-3-5/: main.qml
QML/QMLCourse/qmlb-3-6/: main.qml
QML/QMLCourse/qmlb-3-tarea/: main.qml
QML/QMLCourse/qmlb-4-1/: main.qml
QML/QMLCourse/qmlb-4-2/: main.qml
QML/QMLCourse/qmlb-4-3/: main.qml
QML/QMLCourse/qmlb-4-4/: main.qml
QML/QMLCourse/qmlb-4-5/: main.qml
QML/QMLCourse/qmlb-4-6/: MyButton.qml  main.qml
QML/QMLCourse/qmlb-4-tarea/: main.qml
QML/QMLCourse/qmlb-5-1/: main.qml
QML/QMLCourse/qmlb-5-2/: main.qml
QML/QMLCourse/qmlb-5-3/: main.qml
QML/QMLCourse/qmlb-5-4/: MyShape.qml  main.qml
QML/QMLCourse/qmlb-5-5/: main.qml
QML/QMLCourse/qmlb-5-6/: main.qml
QML/QMLCourse/qmlb-5-7/: MyShape.qml  main.qml
QML/QMLCourse/qmlb-5-8/: main.qml
QML/QMLCourse/qmlb-5-9/: HoverButton.qml  main.qml  qml.qrc
QML/QMLCourse/qmlb-5-tarea/: ButtonPad.qml  main.qml  qml.qrc
QML/QMLCourse/qmlb-6-1/: main.qml
QML/QMLCourse/qmlb-6-2/: main.qml
QML/QMLCourse/qmlb-6-3/: main.qml
QML/QMLCourse/qmlb-6-4/: main.qml  qml.qrc
QML/QMLCourse/qmlb-6-5/: main.qml
QML/QMLCourse/qmlb-6-6/: main.qml
QML/QMLCourse/qmlb-6-7/: main.qml
QML/QMLCourse/qmlb-6-8/: main.qml
QML/QMLCourse/qmlb-6-9/: main.qml
QML/QMLCourse/qmlb-6-tarea/: main.qml
QML/QMLCourse/qmlb-7-1/: MyBox.qml  qml.qrc
QML/QMLCourse/qmlb-8-1/: main.qml
QML/QMLCourse/qmlb-8-10/: main.qml
QML/QMLCourse/qmlb-8-11/: main.qml
QML/QMLCourse/qmlb-8-12/: main.qml
QML/QMLCourse/qmlb-8-14/: main.qml
QML/QMLCourse/qmlb-8-16/: main.qml  qml.qrc
QML/QMLCourse/qmlb-8-17/: main.qml
QML/QMLCourse/qmlb-8-18/: main.qml
QML/QMLCourse/qmlb-8-19/: main.qml
QML/QMLCourse/qmlb-8-4/: main.qml  qml.qrc
QML/QMLCourse/qmlb-8-5/: main.qml
QML/QMLCourse/qmlb-8-6/: main.qml
QML/QMLCourse/qmlb-8-7/: main.qml
QML/QMLCourse/qmlb-8-8/: main.qml
QML/QMLDynamically/: README.md
(+37 files in other folders)
